# python_bootcamp

./: .gitignore  README.md
day00/: README.md
day00/ex00/: answers.txt  requirements.txt
day00/ex01/: exec.py
day00/ex02/: whois.py
day00/ex03/: count.py
day00/ex04/: operations.py
day00/ex05/: kata00.py  kata01.py  kata02.py  kata03.py  kata04.py
day00/ex06/: recipe.py
day00/ex07/: filterwords.py
day00/ex08/: sos.py
day00/ex09/: guess.py
day00/ex10/: loading.py  roading.py
day01/ex00/: book.py  recipe.py  test.py
day01/ex01/: game.py
day01/ex02/: test.py  vector.py
day01/ex03/: generator.py
day01/ex04/: eval.py
day01/ex05/: banking_test1.py  banking_test2.py  the_bank.py
day02/ex00/: ft_filter.py  ft_map.py  ft_reduce.py  test.py
day02/ex01/: main.py
day02/ex02/: logger.py
day02/ex03/: bad.csv  bad.py  csvreader.py  good.csv  good.py
day02/ex04/: MANIFEST  build.sh  loading.py  logger.py  progressbar.py  pyproject.toml  setup.cfg  setup.py
day02/ex04/logging/: log.py
day02/ex04/src/example_package_YOUR_USERNAME_HERE.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
day02/ex04/src/my_minipack/: logger.py  progressbar.py
day02/ex04/src/my_minipack.egg-info/: PKG-INFO  SOURCES.txt
day02/ex04/tests/: loading_test.py  logger_test.py
day03/ex00/: NumPyCreator.py  test.py
day03/ex01/: ImageProcessor.py  test.py
day03/ex02/: ScrapBooker.py  test.py
day03/ex03/: ColorFilter.py  ImageProcessor.py  test.py
day03/ex04/: AdvancedFilter.py  kmeans.py
install/: zshrc.txt
