[metadata]
name = my-minipack
version = 1.0.0
description = A small example package
url = None
author = cclaude
author_email = cclaude@student.42.fr
license = GPLv3
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Students
    Topic :: Education
    Topic :: HowTo
    Topic :: Package
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src